fix spacing under coordinates div, work on save/load function

--- a/css/PixelPainter.css
+++ b/css/PixelPainter.css
@@ -1,5 +1,19 @@
+html {
+  font-family: "Hi Melody", cursive;
+}
+
+button {
+  font-family: "Hi Melody", cursive;
+}
+
 button:focus {
   outline: 0;
+}
+
+h1 {
+  font-family: "Hi Melody", cursive;
+  font-size: 40pt;
+  text-align: center;
 }
 
 #pixlePainter {
@@ -7,139 +21,252 @@ button:focus {
 }
 
 #menuOptions {
-  border-bottom: 1px solid black;
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  background-color: grey;
+  border-radius: 8px;
+  width: fit-content;
 }
 
 .modifierButtons {
-  border-style: inset;
+  border-style: outset;
+  border-radius: 8px;
+  background-color: #cccccc;
+  margin: 5px 5px 5px 5px;
+  font-family: "Hi Melody", cursive;
+  font-size: 12pt;
+  transition: 0.3s;
+}
+
+.modifierButtons:hover {
+  background-color: #ff2200;
+  color: white;
 }
 
 .modifierButtons:focus {
-  background-color: black;
+  border-style: inset;
+  background-color: #00ccff;
+  color: white;
+}
+
+.jscolor {
+  border: 3px solid black;
+  border-radius: 8px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-family: "Nanum Pen Script", cursive;
+  font-size: 18pt;
+  transition: 0.3s;
+  outline: 0;
+}
+
+.jscolor:hover {
+  border: 3px solid #00ccff;
+}
+
+.add_delete {
+  border-style: outset;
+  border-radius: 8px;
+  margin: 5px 5px 5px 0px;
+  font-family: "Hi Melody", cursive;
+  font-size: 12pt;
+  transition: 0.3s;
+  background-color: #bababa;
+}
+
+.add_delete:hover {
+  background-color: #ff2200;
+  color: white;
+}
+
+.add_delete:focus {
+  border-style: inset;
+  background-color: #00ccff;
   color: white;
 }
 
 #savedColors {
-  border: 1px dotted black;
-  height: auto;
-  width: auto;
+  height: inherit;
+  width: inherit;
   margin: 5px 0px 5px 0px;
 }
 
 .newColors {
+  display: inline-flex;
   height: 20px;
   width: 20px;
-  border-radius: 50%;
+  border-radius: 40%;
+  border: 3px solid grey;
   margin: 3px;
+  transition: 0.2s;
+}
+
+.newColors:hover {
+  border: 3px solid #00ccff;
 }
 
 .newColors:focus {
   border: 3px solid black;
 }
 
+#currentCoordinates {
+  background-color: #00ccff;
+  width: fit-content;
+  padding: 5px;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+}
+
+#xyCoord {
+  background-color: aliceblue;
+  width: fit-content;
+  border-radius: 8px;
+  padding: 2px;
+}
+
 #canvasGrid {
   border: 1px solid black;
   width: fit-content;
+  user-select: none; /* supported by Chrome and Opera */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
 .gridColors {
-  border-style: outset;
-  height: 15px;
-  width: 15px;
+  display: inline-flex;
+  /* border-style: outset; */
+  border: 1px dotted grey;
+  height: 18px;
+  width: 18px;
   padding: 0px;
+  transition: 0.2s;
+}
+
+.gridColors:hover {
+  background-color: #d3d3d3 !important;
 }
 
 .gridColors:focus {
   /* border: none; */
 }
 
-@media only screen and (max-width: 932px) {
+@media only screen and (max-width: 1232px) {
+  .gridColors {
+    height: 17px !important;
+    width: 17px !important;
+  }
+}
+
+@media only screen and (max-width: 1172px) {
+  .gridColors {
+    height: 16px !important;
+    width: 16px !important;
+  }
+}
+
+@media only screen and (max-width: 1112px) {
+  .gridColors {
+    height: 15px !important;
+    width: 15px !important;
+  }
+}
+
+@media only screen and (max-width: 1052px) {
   .gridColors {
     height: 14px !important;
     width: 14px !important;
   }
 }
 
-@media only screen and (max-width: 872px) {
+@media only screen and (max-width: 992px) {
   .gridColors {
     height: 13px !important;
     width: 13px !important;
   }
 }
 
-@media only screen and (max-width: 812px) {
+@media only screen and (max-width: 932px) {
   .gridColors {
     height: 12px !important;
     width: 12px !important;
   }
 }
 
-@media only screen and (max-width: 752px) {
+@media only screen and (max-width: 872px) {
   .gridColors {
     height: 11px !important;
     width: 11px !important;
   }
 }
 
-@media only screen and (max-width: 692px) {
+@media only screen and (max-width: 812px) {
   .gridColors {
     height: 10px !important;
     width: 10px !important;
   }
 }
 
-@media only screen and (max-width: 617px) {
+@media only screen and (max-width: 752px) {
   .gridColors {
     height: 9px !important;
     width: 9px !important;
   }
 }
 
-@media only screen and (max-width: 557px) {
+@media only screen and (max-width: 692px) {
   .gridColors {
     height: 8px !important;
     width: 8px !important;
   }
 }
 
-@media only screen and (max-width: 497px) {
+@media only screen and (max-width: 632px) {
   .gridColors {
     height: 7px !important;
     width: 7px !important;
   }
 }
 
-@media only screen and (max-width: 437px) {
+@media only screen and (max-width: 572px) {
   .gridColors {
     height: 6px !important;
     width: 6px !important;
   }
 }
 
-@media only screen and (max-width: 377px) {
+@media only screen and (max-width: 512px) {
   .gridColors {
     height: 5px !important;
     width: 5px !important;
   }
 }
 
-@media only screen and (max-width: 317px) {
+@media only screen and (max-width: 452px) {
   .gridColors {
     height: 4px !important;
     width: 4px !important;
   }
 }
 
-@media only screen and (max-width: 257px) {
+@media only screen and (max-width: 392px) {
   .gridColors {
     height: 3px !important;
     width: 3px !important;
   }
 }
 
-@media only screen and (max-width: 197px) {
+@media only screen and (max-width: 317px) {
+  .canvasGrid {
+    /* display: inline-flex !important; */
+    width: 302px !important;
+    height: 302px !important;
+    position: static;
+  }
   .gridColors {
-    height: 2px !important;
-    width: 2px !important;
+    height: 3px !important;
+    width: 3px !important;
+    position: static;
   }
 }
